Bimba Dev/src/objects/Business_Driver__c.object
<CustomObject>
    <description>TOOLKIT: An object to capture business drivers related to a release and a capability.</description>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <label>Business Driver</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <description>Replaced the original lookup field to allow for selecting multiple capabilities</description>
        <inlineHelpText>Select the Capability or Capabilities that will help enable the Business Driver.</inlineHelpText>
        <label>Capability</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Business Driver</relationshipLabel>
        <relationshipName>Business_Driver</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Driver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Driver__c</columns>
        <columns>Capability__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>